# concrete

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TUTORIAL.md  build.rs
crates/slatestreams/: Cargo.toml
crates/slatestreams-client/: Cargo.toml
crates/slatestreams-client/src/: lib.rs  main.rs
crates/slatestreams-server/: Cargo.toml
crates/slatestreams-server/src/: main.rs
crates/slatestreams-workload/: Cargo.toml
crates/slatestreams-workload/src/: first_init.rs  helper.rs  parallel_driver_append_read.rs  reader.rs  writer.rs
crates/slatestreams/proto/slatestreams/v1/: streams.proto
crates/slatestreams/src/: grpc.rs
crates/slatestreams/src/basin/: error.rs  mod.rs
crates/slatestreams/src/storage/: sequence.rs
examples/video-conferencing/client/app/: layout.tsx  page.tsx
examples/video-conferencing/client/app/components/: controls.tsx  join-form.tsx  video-grid.tsx  video-room.tsx
examples/video-conferencing/client/app/room/[id]/: page.tsx
examples/video-conferencing/client/lib/: signaling.ts
examples/video-conferencing/server/: Makefile  go.mod  go.sum  main.go
examples/video-conferencing/server/model/: mediaFrame.go  message.go
examples/video-conferencing/server/proto/slatestreams/v1/: streams.proto
src/: error.rs  lib.rs  main.rs  record.rs  stream.rs  stream_controller.rs  streamer.rs
src/basin/: basin.rs
src/key/: key.rs
src/kv/: bash.rs  mod.rs  stream_id.rs  stream_tail_position.rs
src/storage/: error.rs  in_memory.rs  mod.rs  slatedb.rs
