[package]
name = "slatestreams"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
blake3 = "1.8.3"
bytes = "1.11.1"
enum-ordinalize = "4.3.2"
prost = "0.14.3"
slatedb = "0.11.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "net"] }
tokio-stream = "0.1.17"
tonic = "0.14.5"
tonic-prost = "0.14.5"
uuid = "1.23.1"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
